--- a/index.html
+++ b/index.html
@@ -1,17 +1,30 @@
-!<!DOCTYPE html>
-<html lang = "en">
-<html>
-    <head>
-        <link rel="stylesheet" href = "index.css"/>
-    </head>
-        <body>
-            <div>
-                <p></p>
-                <p></p>
-                <ul>
-                    <li> </li>
-                    <li> </li>
-                </ul>
-            </div>   
-        </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href = "index.css"/>
+</head>
+    <body>
+        <div id = "container">
+            <p class = "highlight"> this is the first paragreaph</p>
+            <p class = "highlight2">this is the second paragraph</p>
+            <ul>
+                <li class = "highlight"> this another list </li>
+                <li> <p class = "highlight2">this is a paragraph inside an order list</p></li>
+            </ul>
+        </div> 
+        <h1>Hello WOrld</h1>
+        <p>word 1</p>
+        <p>word 2</p>
+        <p>word 3</p>
+        <p>word 4</p>
+
+        <h2>Multiple Selectors</h2>
+        <p>This is another paragraph</p>
+        <span>this a span</span>
+
+    </body>
 </html>
